--- a/CourseProjectDB/App.config
+++ b/CourseProjectDB/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="CourseProjectDB.Properties.Settings.CarriagesSystemConnection"
+            connectionString="Data Source=ADRUZIK-PC\SQLEXPRESS;Initial Catalog=carriages_system;Persist Security Info=True;User ID=root;Password=root"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
