--- a/CourseProjectDB/CourseProjectDB.csproj
+++ b/CourseProjectDB/CourseProjectDB.csproj
@@ -76,6 +76,12 @@
     <Compile Include="AdminMainForm.Designer.cs">
       <DependentUpon>AdminMainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrintTaskForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrintTaskForm.Designer.cs">
+      <DependentUpon>PrintTaskForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PrintTaskForm.resx">
+      <DependentUpon>PrintTaskForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
